--- a/files/app/views/home/index.html.slim
+++ b/files/app/views/home/index.html.slim
@@ -9,7 +9,7 @@
   br
   p.text-muted
     ' Built with
-    span dao42/rails-template
+    span wuminzhe/rails-template
     | !
 
   = link_to 'About Page', page_path('about')
